--- a/guessstar/src/main/res/values/strings.xml
+++ b/guessstar/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Guess Star</string>
+    <string name="photo_of_star">Фото знаменитости</string>
 </resources>
